# EQeq

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release_me.yml
eqeq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/IRMOF1/: IRMOF1.cif
pyeqeq/: __init__.py  _version.py  cli.py  main.py
src/: main.cpp  main.h
src/pyeqeq/: __init__.py  cli.py  main.py  settings.py  version.py
tests/: conftest.py  test_pyeqeq.py
