[metadata]
name=pyeqeq
version=v0.0.9
description=Charge equilibration method for crystal structures
long_description=file: README.md
long_description_content_type=text/markdown
project_urls=
source=https://github.com/lsmo-epfl/EQeq
url=https://github.com/lsmo-epfl/EQeq
license=GPL
author=EQeq developers
author_email=kevin.jablonka@epfl.ch
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data=True
packages = find_namespace:
install_requires=
    pybind11
    click
python_requires = >=3.7
package_dir =
    =src

[options.entry_points]
console_scripts=
    eqeq=pyeqeq.cli:cli

[options.packages.find]
where = src
exclude =
    tests



[versioneer]
VCS = git
style = pep440
versionfile_source = eqeq/_version.py
versionfile_build = eqeq/_version.py
tag_prefix =
parentdir_prefix =

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
